OS_type: unix for now
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dendrometry@5 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -13,3 +13,5 @@ Description: This package provides the routines to import old STX compatible fil
 License: GPL (>= 3)
 LazyLoad: yes
 LazyData: yes
+OS_type: unix
+
