sampSurf interface updates
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/dendrometry@6 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/NAMESPACE
+++ b/pkg/NAMESPACE
@@ -4,4 +4,4 @@
 useDynLib(Dendrometry)
 
 #don't export hardcopyLattice for now
-export(SplineVolume, splineSegVol, taperPlot)
+export(SplineVolume, splineSegVol, taperPlot, stx2sT, stx2sTs)
